Import of RSAVAGE/Graph-Easy-Marpa-0.51 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      0.51
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-0.51.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
-[V 1.00]
-Date=2011-04-21T11:09:44
+[V 0.51]
+Date=2011-04-27T10:46:00
+Comments=- Update pre-reqs.
+
+[V 0.50]
+Date=2011-04-26T11:09:44
 Comments=- Original version
