--- a/META.yml
+++ b/META.yml
@@ -17,17 +17,20 @@ name: Graph-Easy-Marpa
 provides:
   Graph::Easy::Marpa:
     file: lib/Graph/Easy/Marpa.pm
-    version: 0.50
+    version: 0.51
   Graph::Easy::Marpa::Parser:
     file: lib/Graph/Easy/Marpa/Parser.pm
-    version: 0.50
+    version: 0.51
   Graph::Easy::Marpa::Test:
     file: lib/Graph/Easy/Marpa/Test.pm
-    version: 0.50
+    version: 0.51
 requires:
+  FindBin: 1.5
+  IO::File: 1.14
   Marpa: 0.202
-  Moose: 0.98
+  Moose: 1.21
+  Text::CSV_XS: 0.8
   namespace::autoclean: 0.09
 resources:
   license: http://opensource.org/licenses/artistic-license.php
-version: 0.50
+version: 0.51
