Import of RSAVAGE/Graph-Easy-Marpa-0.91 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      0.91
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-0.91.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,8 +3,12 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
-[V 0.70]
-Date=2011-06-21T12:18:00
+[V 0.91]
+Date=2011-06-29T11:41:00
+Comments=- Update pre-requisites. Set::FA 1.05 -> 1.06. Add File::Spec, File::Basename, GraphViz2.
+
+[V 0.90]
+Date=2011-06-28T12:18:00
 Comments= <<EOT
 - Allow spaces in graph definitions, by expanding the regexps in the state transition table.
 - Add more sample data, as data/*.raw (for input to the lexer) and data/*.cooked (as output from the lexer
@@ -13,6 +17,7 @@ and input to the parser).
 - Ensure all major methods (normally run() ) return 0 for success and 1 for failure, and that test code does too.
 - Switch from Moose to Hash::FieldHash, to make the code more light-weight.
 - Implement scripts/generate.index.pl to create a web page with embedded Graph::Easy files and corresponding *.svg files.
+- Upload demo to http://savage.net.au/Perl-modules/html/graph.easy.marpa/index.html.
 EOT
 
 [V 0.60]
