--- a/META.yml
+++ b/META.yml
@@ -17,23 +17,26 @@ name: Graph-Easy-Marpa
 provides:
   Graph::Easy::Marpa:
     file: lib/Graph/Easy/Marpa.pm
-    version: 0.90
+    version: 0.91
   Graph::Easy::Marpa::Lexer:
     file: lib/Graph/Easy/Marpa/Lexer.pm
-    version: 0.90
+    version: 0.91
   Graph::Easy::Marpa::Lexer::DFA:
     file: lib/Graph/Easy/Marpa/Lexer/DFA.pm
-    version: 0.90
+    version: 0.91
   Graph::Easy::Marpa::Parser:
     file: lib/Graph/Easy/Marpa/Parser.pm
-    version: 0.90
+    version: 0.91
   Graph::Easy::Marpa::Renderer::GraphViz2:
     file: lib/Graph/Easy/Marpa/Renderer/GraphViz2.pm
-    version: 0.90
+    version: 0.91
   Graph::Easy::Marpa::Utils:
     file: lib/Graph/Easy/Marpa/Utils.pm
-    version: 0.90
+    version: 0.91
 requires:
+  File::Basename: 2.78
+  File::Spec: 3.33
+  GraphViz2: 1.06
   Hash::FieldHash: 0.1
   IO::File: 1.14
   List::Compare: 0.37
@@ -42,8 +45,8 @@ requires:
   OpenOffice::OODoc: 2.125
   Perl6::Slurp: 0.03
   Set::Array: 0.23
-  Set::FA: 1.04
+  Set::FA: 1.06
   Text::CSV_XS: 0.8
 resources:
   license: http://opensource.org/licenses/artistic-license.php
-version: 0.90
+version: 0.91
