Import of RSAVAGE/Graph-Easy-Marpa-1.01 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.01
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.01.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.01]
+Date=2011-07-20T14:24:00
+Comments=- Remove the restriction that anonymous nodes had to have at least 1 space in their name.
+
 [V 1.00]
 Date=2011-07-19T15:42:00
 Comments= <<EOT
