Import of RSAVAGE/Graph-Easy-Marpa-1.02 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.02
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.02.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,13 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.02]
+Date=2011-07-21T13:37:00
+Comments= <<EOT
+- Change colors so they're compatible with both the X11 and SVG color schemes.
+- Require GraphViz2 V 1.09 to have access to output image formats such as png:gd etc.
+EOT
+
 [V 1.01]
 Date=2011-07-20T14:24:00
 Comments=- Remove the restriction that anonymous nodes had to have at least 1 space in their name.
