--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.03]
+Date=2011-07-23T16:36:00
+Comments=- Add Sort::Naturally to Build.PL and Makefile.PL, since it's used in t/*.t.
+
 [V 1.02]
 Date=2011-07-21T13:37:00
 Comments= <<EOT
