Import of RSAVAGE/Graph-Easy-Marpa-1.04 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.04
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.04.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,14 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.04]
+Date=2011-07-29T14:12:00
+Comments= <<EOT
+- Make scripts/gem.pl pass rankdir thru to parser.
+- Make scripts/generate.demo.sh pass image type thru to scripts/generate.demo.pl.
+- Fix scripts/graph.easy.index.tx img src field patch which got lost with a git reset.
+EOT
+
 [V 1.03]
 Date=2011-07-23T16:36:00
 Comments=- Add Sort::Naturally to Build.PL and Makefile.PL, since it's used in t/*.t.
