Import of RSAVAGE/Graph-Easy-Marpa-1.05 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.05
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.05.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,17 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.05]
+Date=2011-08-02T15:32:00
+Comments= <<EOT
+- Add File::Slurp to Build.PL and Makefile.PL because its readdir() method is used in t/cooked.t and t/raw.t.
+- Add http://metacpan.org/ link to html/graph.easy.index.tx, so it appears in html/index.html.
+- Clean up confusion between demo output being png or svg. The demo files uploaded to my web site used to be png,
+because one of the outputs (graph.15.*) was empty (for some reason) when svg is used.
+But since svg files are smaller than png files, and everything works, svg is used again.
+- Add DOCTYPE and Content-Type to html/graph.easy.index.tx, so that html/index.html validates as XHTML 1.0 Transitional.
+EOT
+
 [V 1.04]
 Date=2011-07-29T14:12:00
 Comments= <<EOT
