--- a/META.yml
+++ b/META.yml
@@ -17,26 +17,27 @@ name: Graph-Easy-Marpa
 provides:
   Graph::Easy::Marpa:
     file: lib/Graph/Easy/Marpa.pm
-    version: 1.04
+    version: 1.05
   Graph::Easy::Marpa::Lexer:
     file: lib/Graph/Easy/Marpa/Lexer.pm
-    version: 1.04
+    version: 1.05
   Graph::Easy::Marpa::Lexer::DFA:
     file: lib/Graph/Easy/Marpa/Lexer/DFA.pm
-    version: 1.04
+    version: 1.05
   Graph::Easy::Marpa::Parser:
     file: lib/Graph/Easy/Marpa/Parser.pm
-    version: 1.04
+    version: 1.05
   Graph::Easy::Marpa::Renderer::GraphViz2:
     file: lib/Graph/Easy/Marpa/Renderer/GraphViz2.pm
-    version: 1.04
+    version: 1.05
   Graph::Easy::Marpa::Utils:
     file: lib/Graph/Easy/Marpa/Utils.pm
-    version: 1.04
+    version: 1.05
 requires:
   Data::Section::Simple: 0.02
   Date::Format: 2.24
   File::Basename: 2.78
+  File::Slurp: 9999.19
   File::Spec: 3.33
   GraphViz2: 1.09
   Hash::FieldHash: 0.1
@@ -53,4 +54,4 @@ requires:
   Try::Tiny: 0.09
 resources:
   license: http://opensource.org/licenses/artistic-license.php
-version: 1.04
+version: 1.05
