Import of RSAVAGE/Graph-Easy-Marpa-1.06 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.06
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.06.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,16 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.06]
+Date=2011-08-08T11:08:00
+Comments= <<EOT
+- Improve home-grown validate.build.make.pl to include not just *.pm files, but also *.pl and *.t files, so as to find more dependencies.
+- Add Capture::Tiny, File::Remove, File::Temp, Getopt::Long, List::Cycle, Pod::Usage and Text::Xlate to Build.PL and Makefile.PL.
+- And yes I know, List::Cycle is not really needed (yet) :-).
+- Patch the STT so that attribute definitions for classes can have leading spaces, as edge and node attribute definitions already could.
+Eg: 'graph {rankdir: TB }' can now be 'graph { rankdir: TB}'. Note the new space in front of 'rankdir'.
+EOT
+
 [V 1.05]
 Date=2011-08-02T15:32:00
 Comments= <<EOT
