Import of RSAVAGE/Graph-Easy-Marpa-1.07 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.07
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.07.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,17 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.03
 Changelog.Parser=Config::IniFiles V 2.66
 
+[V 1.07]
+Date=2011-12-14T13:29:00
+Comments= <<EOT
+- Fix declaration of null_value for some rules, to stop heaps of warnings during testing and/or running gem.pl.
+The messages you get look like: Zero length sequence for symbol without null value: "group_name",
+if you don't have symbol descriptors declared for symbols whose value can be empty.
+Search Graph::Easy::Marpa::Parser for 'symbols' to see what I had to do because group and node names can be empty.
+- Update Build.PL and Makefile.PL to only require Marpa::XS V 0.026000 (not 0.108000), which is the latest as of today.
+- Add a discussion of Marpa::PP to the FAQ, since I've tested it too.
+EOT
+
 [V 1.06]
 Date=2011-08-08T11:08:00
 Comments= <<EOT
