Import of RSAVAGE/Graph-Easy-Marpa-1.09 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.09
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.09.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,26 @@
 [Module]
 Name=Graph::Easy::Marpa
-Changelog.Creator=Module::Metadata::Changes V 2.03
-Changelog.Parser=Config::IniFiles V 2.66
+Changelog.Creator=Module::Metadata::Changes V 2.04
+Changelog.Parser=Config::IniFiles V 2.68
+
+[V 1.09]
+Date=2012-06-25T14:10:00
+Comments= <<EOT
+- Handle HTML-style labels, even if they contain ';' chars, e.g. by using HTML entities such as &lt;.
+- Add matching test files data/node.(17, 18, 19).(raw, cooked). See also the demo page.
+- Change the abstract slightly to mention we process Graphviz files in the Graph::Easy format.
+- Expand the FAQ re HTML-style labels.
+- Encode HTML entities when including the demos' source code in the demo page, because now demos can
+contain HTML-like labels.
+EOT
+
+[V 1.08]
+Date=2011-12-25T10:33:00
+Comments= <<EOT
+- Change <img... to <object...> in the demo creation code, to keep poor old FireFox happy.
+- Change various things in html/graph.easy.index.tx to we validate as XHTML 1.0 Strict.
+- Switch from Marpa::XS to Marpa::R2.
+EOT
 
 [V 1.07]
 Date=2011-12-14T13:29:00
