--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'Marpa-based parser for Graph::Easy'
+abstract: 'A Marpa-based parser for Graph::Easy-style Graphviz files'
 author:
   - 'Ron Savage <ron@savage.net.au>'
 build_requires:
@@ -8,7 +8,7 @@ build_requires:
 configure_requires:
   Module::Build: 0.38
 dynamic_config: 1
-generated_by: 'Module::Build version 0.38, CPAN::Meta::Converter version 2.110930'
+generated_by: 'Module::Build version 0.4, CPAN::Meta::Converter version 2.120630'
 license: artistic
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.4.html
@@ -17,22 +17,22 @@ name: Graph-Easy-Marpa
 provides:
   Graph::Easy::Marpa:
     file: lib/Graph/Easy/Marpa.pm
-    version: 1.07
+    version: 1.09
   Graph::Easy::Marpa::Lexer:
     file: lib/Graph/Easy/Marpa/Lexer.pm
-    version: 1.07
+    version: 1.09
   Graph::Easy::Marpa::Lexer::DFA:
     file: lib/Graph/Easy/Marpa/Lexer/DFA.pm
-    version: 1.07
+    version: 1.09
   Graph::Easy::Marpa::Parser:
     file: lib/Graph/Easy/Marpa/Parser.pm
-    version: 1.07
+    version: 1.09
   Graph::Easy::Marpa::Renderer::GraphViz2:
     file: lib/Graph/Easy/Marpa/Renderer/GraphViz2.pm
-    version: 1.07
+    version: 1.09
   Graph::Easy::Marpa::Utils:
     file: lib/Graph/Easy/Marpa/Utils.pm
-    version: 1.07
+    version: 1.09
 requires:
   Capture::Tiny: 0.11
   Data::Section::Simple: 0.02
@@ -49,7 +49,7 @@ requires:
   List::Compare: 0.37
   List::Cycle: 1
   Log::Handler: 0.71
-  Marpa::XS: 0.026
+  Marpa::R2: 2.003
   Module::Load: 0.18
   Perl6::Slurp: 0.03
   Pod::Usage: 1.36
@@ -61,4 +61,4 @@ requires:
   Try::Tiny: 0.09
 resources:
   license: http://opensource.org/licenses/artistic-license.php
-version: 1.07
+version: 1.09
