Import of RSAVAGE/Graph-Easy-Marpa-1.10 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.10
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.10.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,16 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.04
 Changelog.Parser=Config::IniFiles V 2.68
 
+[V 1.10]
+Date=2012-10-16T09:49:00
+Comments= <<EOT
+- Fix a bug in the lexer where it used to combine multiple lines in the input file by, basically, using
+join('', <IN>), which meant the last char of a line was juxtaposed with the first char of the next
+line. If the second line started with spaces, that was ok, but if it started with, say, the name of
+a node, then that name was concatenated with what could have been a node name on the end of a previous
+line. This meant 2 separate node names sometimes became one.
+EOT
+
 [V 1.09]
 Date=2012-06-25T14:10:00
 Comments= <<EOT
