Import of RSAVAGE/Graph-Easy-Marpa-1.11 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      1.11
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-1.11.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,28 @@
 [Module]
 Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.04
-Changelog.Parser=Config::IniFiles V 2.68
+Changelog.Parser=Config::IniFiles V 2.78
+
+[V 1.11]
+Date=2012-11-08T12:38:00
+Comments= <<EOT
+- No user-visible code changes.
+- For pre-reqs such as strict, warnings, etc, which ship with Perl, set the version # to 0.
+Reported as RT#80663 by Father Chrysostomos for Tree::DAG_Node.
+- Remove color cycle code from scripts/stt.html, since it was never used.
+- Rename HTML templates (to match) from rainbow.table.tx to basic.table.tx and rainbow.row.tx to basic.column.tx.
+- Rename rainbow.page.tx to stt.tx.
+- Move html/graph.easy.index.tx to htdocs/assets/templates/graph/easy/marpa.
+- Add Graph::Easy::Marpa::Config to manage location of templates.
+- Add config/.htgraph.easy.marpa.conf.
+- Add scripts/copy.config.pl.
+- Move code from scripts/stt.pl into Graph::Easy::Marpa::Utils.
+- Ship html/stt.html.
+- Add environment report to HTML templates.
+- Link graph demo template and stt template to each other.
+- Update pre-reqs.
+- Remove demo files which contained syntax errors: data/graph.10.raw, data/graph.12.raw and data/node.11.raw.
+EOT
 
 [V 1.10]
 Date=2012-10-16T09:49:00
