Import of RSAVAGE/Graph-Easy-Marpa-2.04 from CPAN.
gitpan-cpan-distribution: Graph-Easy-Marpa
gitpan-cpan-version:      2.04
gitpan-cpan-path:         RSAVAGE/Graph-Easy-Marpa-2.04.tgz
gitpan-cpan-author:       RSAVAGE
gitpan-cpan-maturity:     released

--- a/Changelog.ini
+++ b/Changelog.ini
@@ -1,7 +1,32 @@
 [Module]
 Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.05
-Changelog.Parser=Config::IniFiles V 2.82
+Changelog.Parser=Config::IniFiles V 2.83
+
+[V 2.04]
+Date=2014-09-17T17:17:00
+Comments= <<EOT
+- Update Build.PL and Makefile.PL re putting this package on github.
+- Replace the deprecated 'action_object' parameter to Marpa::R2::Scanless::G with the 'semantics_package'
+parameter to Marpa::R2::Scanless::R.
+EOT
+
+[V 2.03]
+Date=2014-07-08T08:59:00
+Comments=- Patch test files to report test counts.
+
+[V 2.02]
+Date=2014-02-22T17:44:00
+Comments= <<EOT
+- Add 'lexeme default = latm => 1' to the grammar.
+- Make V 2.082 the minimum version for Marpa::R2.
+2.01 Thu Jan 12:31:00 2014
+- Patch CPAN::Meta::Validator to not delete META.* (Module::Build does the dirty work).
+- Add use strict/warnings to Build.PL, Makefile.PL.
+- Fix typo in Makefile.PL prereq for Path::Tiny.
+- Clean up pre-reqs, removing File::Slurp and Text::CSV::Slurp.
+- Fix various typos which only affect the author.
+EOT
 
 [V 2.00]
 Date=2013-07-29T14:42:00
