--- a/Changelog.ini
+++ b/Changelog.ini
@@ -3,6 +3,10 @@ Name=Graph::Easy::Marpa
 Changelog.Creator=Module::Metadata::Changes V 2.05
 Changelog.Parser=Config::IniFiles V 2.83
 
+[V 2.05]
+Date=2014-09-19T09:15:00
+Comments=- Fix typo in repo in Build.PL.
+
 [V 2.04]
 Date=2014-09-17T17:17:00
 Comments= <<EOT
